# aizynthtrain

./: CHANGELOG.md  README.md  env-dev.yml  pyproject.toml
aizynthtrain/data/: uspto.py
aizynthtrain/modelling/chemformer/: create_dataset_split.py
aizynthtrain/modelling/expansion_policy/: create_template_lib.py  eval_multi_step.py  eval_one_step.py  featurize.py  split_data.py  training.py
aizynthtrain/modelling/filter_policy/: create_metadata.py  featurize.py  split_data.py  training.py
aizynthtrain/pipelines/: chemformer_data_prep_pipeline.py  chemformer_train_pipeline.py  disconnection_chemformer_data_prep_pipeline.py  expansion_model_pipeline.py  filter_model_pipeline.py  stereo_template_pipeline.py  template_pipeline.py
aizynthtrain/pipelines/data/: autotag_data_extraction.yaml  chemformer_data_prep_pipeline.yaml  chemformer_product_tagging_pipeline.yaml  reaction_validation_pipeline.yaml  stereo_checks_pipeline.yaml  template_validation_pipeline.yaml
aizynthtrain/pipelines/notebooks/: expansion_model_val.py  filter_model_val.py  reaction_selection.py  stereo_selection.py  stereo_template_selection.py  template_selection.py
aizynthtrain/utils/: chem.py  configs.py  data_utils.py  files.py  keras_utils.py  onnx_converter.py  reporting.py  stereo_flipper.py  template_runner.py
configs/filter/: example.yml
configs/uspto/: expansion_model_pipeline_config.yml  expansion_pipeline.sh  ringbreaker_model_pipeline_config.yml  ringbreaker_pipeline.sh  routes_for_eval.json  setup_folder.py  smiles_for_eval.txt  stock_for_eval_recov.txt  template_pipeline.sh  template_pipeline_config.yml  uspto_pipeline.sh
tests/: test_configs.py  test_data_utils.py  test_file_utils.py  test_onnx_converter.py
tests/data/: test_keras.hdf5
