[tool.poetry]
name = "aizynthtrain"
version = "0.2.0"
description = "Tools to train reaction predictions models for AiZynthFinder"
authors = ["Genheden, Samuel <samuel.genheden@astrazeneca.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupytext = "^1.3.3"
papermill = "^2.3.4"
mendeleev = "^0.10.0"
nbconvert = "^7.2.3"
onnx = "^1.13.1"
tf2onnx = "^1.13.0"
urllib3 = "<2.0"
aizynthfinder = "<4.0"
reaction-utils = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
