[tool.poetry]
name = "aizynthtrain"
version = "0.2.0"
description = "Tools to train reaction predictions models for AiZynthFinder"
authors = ["Genheden, Samuel <samuel.genheden@astrazeneca.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupytext = "^1.3.3"
papermill = { git = "https://github.com/nteract/papermill.git" }
mendeleev = "^0.10.0"
nbconvert = "^7.2.3"
onnx = "^1.13.1"
tf2onnx = "^1.13.0"
urllib3 = "<2.0"
aizynthfinder = { version = "^4.0.0", extras = ["all", "tf"] }
reaction-utils = "^1.3.0"
onnxruntime = "<1.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
